--- a/css/styles.css
+++ b/css/styles.css
@@ -4152,8 +4152,7 @@ textarea.form-control-lg {
 }
 
 header .banner2{
-  width: 1580px;
-  height: 650px;
+  width: 100%;
   opacity: var(--bs-accordion-btn-color);
 }
 .regatas{
