--- a/css/styles.css
+++ b/css/styles.css
@@ -4153,6 +4153,7 @@ textarea.form-control-lg {
 
 header .banner2{
   width: 100%;
+  max-height: 600px;
   opacity: var(--bs-accordion-btn-color);
 }
 .regatas{
